tests/parsing/smtlib/v2.7/errors/059_declare-datatype_bad_name_1.smt2
(set-logic ALL)
(declare-datatype _)
